Add `launchpad` endpoint for extended info with purchased items amounts
